--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -9,7 +9,7 @@
     <div class="container">
     <div class="jumbotron">
     <h1>Getting to know Nicole Cox</h1>
-<p class="important">My full name is Nicole Madison Cox and with this webpage I will be telling you facts and stories about myself!</p>
+<p>My full name is Nicole Madison Cox and with this webpage I will be telling you facts and stories about myself!</p>
 </div>
 </div>
 <blockquote> "At the end of the day, life is about being happy being who you are, and i feel like we are so blessed to have a support system and the best family to really just support each other no matter what we're going through"
@@ -40,10 +40,14 @@
 </ul>
 <h2>Pets</h2>
   <p>My life wouldn't be fulfilled without our companions</p>
-  <p1>I have a lot of animals in my life</p1>
+  <p>I have <em>a lot</em> of animals in my life</p1>
+  <p>I have a bearded dragon named Clint, two dogs named Lilly and Chester, and a cat named Fiddle.</p>
 <h2>Hobbies and Interest</h2>
+<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day./p>
 <h2>Aspirations</h2>
+<p>I hope in my lifetime I find someone who I will wish to spend my life with. To be able to get a good paying job that gives me the satisfaction of knowing what I'm doing is and will be positivily effecting the world around me. Being able to buy my mom a new car one day (one day mom) and living my life in celebration of my beautiful sister Courtney.</p>
 <h2>Goals</h2>
+<p>If I can use this coding program to obtain a job I would hope that one day I could be a independent web developer to help spreaf awareness for outling issues in our country such as hunger and mental illness</p>
 
   </body>
 </html>
