adding known bugs to readme

--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -10,6 +10,7 @@
     <div class="jumbotron">
     <h1>Getting to know Nicole Cox</h1>
 <p>My full name is Nicole Madison Cox and with this webpage I will be telling you facts and stories about myself!</p>
+<a href="https://www.youtube.com/watch?v=djV11Xbc914">Please open in seperate tab to enjoy some background music!</a>
 </div>
 </div>
 <blockquote> "At the end of the day, life is about being happy being who you are, and i feel like we are so blessed to have a support system and the best family to really just support each other no matter what we're going through"
