--- a/about-me/about-me/about-me.html
+++ b/about-me/about-me/about-me.html
@@ -44,7 +44,14 @@
   <p>I have <em>a lot</em> of animals in my life</p1>
   <p>I have a bearded dragon named Clint, two dogs named Lilly and Chester, and a cat named Fiddle.</p>
 <h2>Hobbies and Interest</h2>
-<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day./p>
+<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own  mental state I want to <strong>push myself</strong> to grow and learn every day.</p>
+  <p>My current interest include going to school at Epicodus! Bellow I will link some of my most recent projects. </p>
+  <ol>
+    <li> <a href="https://github.com/nicolecox19/hello-world.html.git"> This page is to demomstate my terminal knowledge, practicing github and learning html</a>
+     </li>
+     <li> <a href="https://github.com/nicolecox19/my-favorite-things.git">This is a webpage which shows better css styles and informs you about my pet dragon clint. This includes my first read me </a> </li>
+     <li> <a href="https://github.com/nicolecox19/our-cats.git">This page talks more about animals that a partner and I have. Can you tell we <em>love</em> our cats  </a> </li>
+  </ol>
 <h2>Aspirations</h2>
 <p>I hope in my lifetime I find someone who I will wish to spend my life with. To be able to get a good paying job that gives me the satisfaction of knowing what I'm doing is and will be positivily effecting the world around me. Being able to buy my mom a new car one day (one day mom) and living my life in celebration of my beautiful sister Courtney.</p>
 <h2>Goals</h2>
