--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -16,7 +16,7 @@
 <blockquote> "At the end of the day, life is about being happy being who you are, and i feel like we are so blessed to have a support system and the best family to really just support each other no matter what we're going through"
   <footer>-Kim Kardashian</footer>
 </blockquote>
-<h2>My Family</h2>
+<h2><strong>My Family</strong></h2>
   <p>Family is one of the greatest treasures we get to know with our time on earth. My moms name is Traci Carter, my grandmas name is Joan Diehl, and my Grandpas name is Bill Diehl</p>
   <p>Here are a couple facts about my mom</p>
 <ul>
@@ -27,28 +27,30 @@
   <li>Her favorite color is red.</li>
 </ul>
   <p>Here are a couple facts about my grandma</p>
-<ul>
-  <li>She grew up in roseburg during WW2</li>
-  <li>Shes played the piano from childhood to this day</li>
-  <li>She was a music teacher at a grade school for her profession</li>
-  <li>She had two children named Traci and Todd</li>
-</ul>
-  <p>Here are a couple of facts about my grandpa</p>
-<ul>
-  <li>He was adopted</li>
-  <li>He served in the marines</li>
-  <li>He worked for a bank</li>
-</ul>
-<h2>Pets</h2>
+  <div class="well">
+    <ul>
+      <li>She grew up in roseburg during WW2</li>
+      <li>Shes played the piano from childhood to this day</li>
+      <li>She was a music teacher at a grade school for her profession</li>
+      <li>She had two children named Traci and Todd</li>
+    </ul>
+    <p>Here are a couple of facts about my grandpa</p>
+    <ul>
+      <li>He was adopted</li>
+      <li>He served in the marines</li>
+      <li>He worked for a bank</li>
+    </ul>
+  </div>
+<h2><Strong>Pets</strong></h2>
   <p>My life wouldn't be fulfilled without our companions</p>
   <p>I have <em>a lot</em> of animals in my life</p1>
   <p>I have a bearded dragon named Clint, two dogs named Lilly and Chester, and a cat named Fiddle.</p>
-<h2>Hobbies and Interest</h2>
-<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day./p>
-<h2>Aspirations</h2>
-<p>I hope in my lifetime I find someone who I will wish to spend my life with. To be able to get a good paying job that gives me the satisfaction of knowing what I'm doing is and will be positivily effecting the world around me. Being able to buy my mom a new car one day (one day mom) and living my life in celebration of my beautiful sister Courtney.</p>
+<h2><strong>Hobbies and Interest</strong></h2>
+  <p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day.</p>
+<h2><strong>Aspirations</strong></h2>
+  <p>I hope in my lifetime I find someone who I will wish to spend my life with. To be able to get a good paying job that gives me the satisfaction of knowing what I'm doing is and will be positivily effecting the world around me. Being able to buy my mom a new car one day (one day mom) and living my life in celebration of my beautiful sister Courtney.</p>
 <h2>Goals</h2>
-<p>If I can use this coding program to obtain a job I would hope that one day I could be a independent web developer to help spreaf awareness for outling issues in our country such as hunger and mental illness</p>
+  <p>If I can use this coding program to obtain a job I would hope that one day I could be a independent web developer to help spreaf awareness for outling issues in our country such as hunger and mental illness</p>
 
   </body>
 </html>
