--- a/about-me/css/about-me.html
+++ b/about-me/css/about-me.html
@@ -44,7 +44,7 @@
   <p>I have <em>a lot</em> of animals in my life</p1>
   <p>I have a bearded dragon named Clint, two dogs named Lilly and Chester, and a cat named Fiddle.</p>
 <h2>Hobbies and Interest</h2>
-<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day./p>
+<p>Things that intruge me are discovering my limits wether it comes to exersice, patients, or my own mental state I want to push myself to grow and learn every day.</p>
 <h2>Aspirations</h2>
 <p>I hope in my lifetime I find someone who I will wish to spend my life with. To be able to get a good paying job that gives me the satisfaction of knowing what I'm doing is and will be positivily effecting the world around me. Being able to buy my mom a new car one day (one day mom) and living my life in celebration of my beautiful sister Courtney.</p>
 <h2>Goals</h2>
